# olx_scraper

./: LICENSE  pyproject.toml
olx/olx/: items.py  loaders.py  pipelines.py  settings.py
olx/olx/spiders/: olx_spider.py
